development/sf_project/force-app/main/default/objects/Account/fields/Emergency_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Name__c</fullName>
    <label>Emergency Contact Name</label>
    <type>Text</type>
    <length>255</length>
    <description>Name of the patient emergency contact person</description>
</CustomField>