development/sf_project/force-app/main/default/objects/Account/fields/NRIC__c.field-meta.xml
<CustomField>
    <fullName>NRIC__c</fullName>
    <label>NRIC</label>
    <type>Text</type>
    <length>9</length>
    <unique>true</unique>
    <externalId>true</externalId>
    <description>Singapore National Registration Identity Card number</description>
    <inlineHelpText>Enter the patient NRIC (e.g., S1234567A)</inlineHelpText>
</CustomField>